// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Content should render to snapshot 1`] = `
<Component>
  <ScrollView
    bounces={false}
    contentContainerStyle={
      Array [
        undefined,
        Object {
          "paddingBottom": 60,
        },
      ]
    }
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 25,
      }
    }
  >
    <Filter />
  </ScrollView>
  <TouchableOpacity
    activeOpacity={1}
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "padding": 15,
        },
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
      ]
    }
  >
    <withAnimatable(Component)
      animation="fadeIn"
      delay={100}
      direction="normal"
      iterationCount={1}
      onAnimationBegin={[Function]}
      onAnimationEnd={[Function]}
      useNativeDriver={false}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        DONE
      </Text>
    </withAnimatable(Component)>
  </TouchableOpacity>
</Component>
`;

exports[`FilterPopup FilterPopup: should hide to snapshot 1`] = `
<Component
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <StatusBar
    animated={false}
    hidden={false}
    showHideTransition="fade"
  />
  <Component
    pointerEvents="box-none"
    style={
      Object {
        "bottom": 13,
        "left": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <FilterPopupButton
      onPress={[Function]}
      text="Filter / Sort"
    />
  </Component>
</Component>
`;

exports[`FilterPopup FilterPopup: should render to snapshot 1`] = `
<Component
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <StatusBar
    animated={false}
    hidden={true}
    showHideTransition="fade"
  />
  <Component
    pointerEvents="box-none"
    style={
      Object {
        "bottom": 13,
        "left": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <FilterPopupButton
      onPress={[Function]}
      text="Filter / Sort"
    />
  </Component>
  <withAnimatable(FilterContent)
    animation={
      Object {
        "from": Object {
          "opacity": 0,
          "translateY": 1334,
        },
        "to": Object {
          "opacity": 1,
          "translateY": 0,
        },
      }
    }
    contentStyle={
      Object {
        "paddingTop": 100,
      }
    }
    delay={0}
    direction="normal"
    duration={1000}
    iterationCount={1}
    onAnimationBegin={[Function]}
    onAnimationEnd={[Function]}
    onClose={[Function]}
    scrollEnabled={true}
    useNativeDriver={true}
  />
</Component>
`;
